# routes/index.js
@@ -1,10 +1,8 @@
 const express = require('express');
 const routes = express.Router();
 
-routes.get('/', (req, res) => {
-  return res.send('Main Page');
-});
-
+routes.get('/', (req, res) => {res.send("Main Page");});
+routes.use('/auth', require('./authentication'));
 routes.use('/books', require('./books'));
 routes.use('/authors', require('./authors'));
 
